--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header>
-    <h2><a href="#">Queers in Tech</a></h2>
+    <h2><a href="#">Queers in Tech!</a></h2>
     <nav>
       <li><a href="#about">About</a></li>
       <li><a href="#events">Events</a></li>
